# ds

./: Makefile  Makefile.am  Makefile.in  blink  blink.c  config.h  config.h.in  config.status  configure  configure.in  libtool  makefile  readme  server.py  webcar.html
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
chapter_1/: .1.c.swp  .2.c.swp  1.c  2.c  3.c  main  model.c  readme
go/: main.go
include/: sq_list.h
lib/: 1  Makefile  Makefile.am  Makefile.in  libsq_list.la  sq_list.c  sq_list.lo
lib/.deps/: sq_list.Plo
lib/.libs/: libsq_list.la  libsq_list.lai  libsq_list.so.0.0.0
src/: Makefile  Makefile.am  Makefile.in  main  main.c
src/.deps/: main.Po
src/.libs/: lt-main  main
